--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site no GitHub Pages</title>
+    <title>Pesquisar Roms</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Bem-vindo ao meu site!</h1>
-    <p>Este é um site hospedado no GitHub Pages.</p>
+    <div class="container">
+        <h1>Pesquisar Roms</h1>
+        <input type="text" id="searchInput" onkeyup="filterLinks()" placeholder="Pesquisar arquivos...">
+        <ul id="fileList">
+            <!-- Os links serão carregados aqui dinamicamente -->
+        </ul>
+    </div>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
