--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pesquisar Arquivos</title>
-    <link rel="stylesheet" href="styles.css">
+  <title>Rom Search</title>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  
 </head>
 <body>
-    <div class="container">
-        <h1>Pesquisar Arquivos</h1>
-        <!-- Botão de login Google -->
-        <button id="login-button" onclick="handleAuthClick()">Login com Google</button>
-        <!-- Campo de pesquisa -->
-        <input type="text" id="searchInput" onkeyup="filterLinks()" placeholder="Pesquisar arquivos...">
-        <!-- Lista onde os links serão exibidos -->
-        <ul id="fileList">
-            <!-- Os links serão carregados aqui dinamicamente -->
-        </ul>
-    </div>
-
-    <!-- Biblioteca de API do Google -->
-    <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
-    <!-- Scripts personalizados -->
-    <script src="scripts.js"></script>
+  <div id="main"></div>
+  <script type="module">
+    import init from "/romsearch/assets/dioxus/Rom search.js";
+    init("/romsearch/assets/dioxus/Rom search_bg.wasm").then(wasm => {
+      if (wasm.__wbindgen_start == undefined) {
+        wasm.main();
+      }
+    });
+  </script>
+  
 </body>
 </html>
